# async_benchmarks

./: Dockerfile  README.md  async_server.rb  docker-compose.yml
async_ruby/: Gemfile
c_multithreaded/: Dockerfile  Makefile.am  README  configure.ac
c_multithreaded/src/: c_multithreaded.c
c_notrix/: Dockerfile  Makefile.am  README  configure.ac
c_notrix/src/: notrix.c
nginx/: Dockerfile
nginx/html/: index.html
results/: ab_n50000_c128_c_notrix.txt  ab_n50000_c128_nginx.txt  ab_n50000_c128_ruby_http_async.txt  ab_n50000_c128_rusted_rocket.txt  benchy
rusted_rocket/: Cargo.toml  Dockerfile  Rocket.toml
rusted_rocket/src/: main.rs
