AC_PREREQ([2.69])
AC_INIT([c_multithreaded],[0.1],[meleneth@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AM_SILENT_RULES([yes])
AC_CONFIG_FILES([Makefile])

AM_PROG_AR

# Checks for header files.
AC_CHECK_HEADERS([stddef.h stdlib.h string.h])

AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([atexit floor rint sqrt])

AC_OUTPUT


